# PIPER

./: .gitignore  CMakeLists.txt
include/: config.hpp  testCases.hpp
include/base/: calcs.hpp  divClean.hpp  fluxCalcs.hpp  parse.hpp  reconstruct.hpp  sysEigens.hpp
include/base/init/: detachInit.hpp  init.hpp  init2DTests.hpp  orzagInit.hpp
include/base/utils/: mathsUtils.hpp  opOverload.hpp  utils.hpp
include/classes/: BC.hpp  EoS.hpp  evolver.hpp  exporters.hpp  limiter.hpp  mesh.hpp  recorders.hpp  simulation.hpp  sysCalcs.hpp
include/classes/source/: explicitSolvers.hpp  implicitSolvers.hpp  sourceFuncEx.hpp  sourceUpdates.hpp
include/other/: EoSUtils.hpp
include/settings/: constants.hpp  modules.hpp  settings.hpp  typedefs.hpp
lib/base/: calcs.cpp  divClean.cpp  fluxCalcs.cpp  parse.cpp  reconstruct.cpp  sysEigens.cpp
lib/base/init/: detachInit.cpp  init.cpp  init2DTests.cpp  orzagInit.cpp
lib/base/utils/: mathsUtils.cpp  opOverload.cpp  utils.cpp
lib/classes/: BC.cpp  EoS.cpp  evolver.cpp  exporters.cpp  limiter.cpp  mesh.cpp  recorders.cpp  simulation.cpp  sysCalcs.cpp
lib/classes/source/: explicitSolvers.cpp  implicitSolvers.cpp  sourceFuncEx.cpp  sourceUpdates.cpp
lib/other/: EoSUtils.cpp
other/: alexi1.geqdsk  mutationpp_env_vars.txt  readEqdskFunction
src/: MHDEoS.cpp  MHDMulti.cpp  MHDResis.cpp  detachment.cpp  detachmentScan.cpp  orzag.cpp
src/construct/: EoSConstruct.cpp  EoSConstruct_e.cpp  EoSRange.ipynb
src/construct/study/: EoSExplore.cpp  collRate2D.cpp  collRateStudy.cpp  collisionalityStudy.cpp  resisCompare.cpp  resisFinder.cpp
